<resources>
    <string name="app_name">Rutas transporte huancayo</string>
    <string name="login">Login</string>
    <string name="ingrese_a_su_cuenta">Ingrese a su cuenta</string>
    <string name="recibira_su_recorrido">Recibira el recorrido.</string>
    <string name="recibira_su_recorrido_disfrute">Recibira el recorrido de la empresa de transporte selecionada y disfrute del viaje.</string>
    <string name="rutas_huancayo">Rutas Huancayo</string>
    <string name="siguiente">Siguiente</string>
    <string name="saltar">saltar</string>
    <string name="conductor">Conductor</string>
    <string name="pasajero">Pasajero</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="email">Email</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registro">Registro</string>
    <string name="ya_tengo_cuenta">Ya tengo cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="direccion">Dirección</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirma_tu_contrasena">Confirma tú contraseña</string>
    <string name="contrasena_no_coincide">La contraseña no coincide</string>
    <string name="telefono">Telefono</string>
    <string name="ingresa_tu_contrasena">Ingresa tu contraseña</string>
    <string name="ingresa_tu_nombre">Ingresa tu nombre</string>
    <string name="ingresa_tu_telefono">Ingresa tu telefono</string>
    <string name="ingresa_telefono_valido">Ingrese un telefono válido</string>
    <string name="ingresa_email">Ingrese su correo electronico</string>
    <string name="pass_requiere_8_caracteres">La contraseña requiere al menos 8 caracteres</string>
    <string name="bienvenido_conductor">Bienvenido Conductor</string>
    <string name="registrar_vehiculo">Registrar Vehiculo</string>
    <string name="numero_de_placa">Número de placa</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="color">Color</string>
    <string name="numero_placa">Numero de placa</string>
    <string name="registrar">Registrar</string>

    <string name="registrese_en_nuestra_app">Registrese en nuestra aplicación para obtener todas las funcionalidades</string>

    <string name="campo_vacio">Campo vacio</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="solicitar_ahora">Solicitar Ahora</string>
    <string name="cancelar">Cancelar</string>
    <string name="partida">Partida</string>
    <string name="donde_quiere_ir">Donde quieres ir?</string>
    <string name="this_service_requires_the_activation_of_the_gps">Este servicio requiere de la activación del gps</string>
    <string name="tu_punto_de_partida">Tu punto de partida</string>
    <string name="destino">Destino</string>
    <string name="quieres_ir_aqui">Quieres ir aqui</string>
    <string name="elige_tu_cuenta">Elige tu cuenta</string>
    <string name="ingrese_su_informacion">Ingrese su información</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="se_te_olvido_la_contasena">Se te olvido la Contaseña</string>
    <string name="cambiar_contrasena">Cambiar Contraseña</string>
    <string name="recuperar_constrasena">Recuperar Constraseña</string>
    <string name="seleccione_su_tipo_de_vehiculo">Seleccione su tipo de vehiculo</string>
    <string name="text_ver_ruta">Ver Ruta</string>
    <string name="empresas">Empresas</string>
    <string name="text_empresas_list">Empresas de Transporte</string>


</resources>