<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.RegistroVehiculoActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@drawable/gradientlogin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="8dp"
        android:text="@string/registrar_vehiculo"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_marca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/colorBlanco"
            android:textColorHint="@color/colorBlanco">
        <EditText
            android:id="@+id/edtMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/marca"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/colorBlanco"
            android:textColorHint="@color/colorBlanco" />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:background="#999999" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_modelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/colorBlanco"
            android:textColorHint="@color/colorBlanco">
        <EditText
            android:id="@+id/edtModelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/modelo"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/colorBlanco"
            android:textColorHint="@color/colorBlanco" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:background="#999999" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/colorBlanco"
            android:textColorHint="@color/colorBlanco">
        <EditText
            android:id="@+id/edtColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/color"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/colorBlanco"
            android:textColorHint="@color/colorBlanco" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:background="#999999" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_placa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/colorBlanco"
            android:textColorHint="@color/colorBlanco">
        <EditText
            android:id="@+id/edtNum_placa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/numero_placa"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/colorBlanco"
            android:textColorHint="@color/colorBlanco" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:src="@drawable/round_arrow_forward_24"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:tint="@android:color/white"
                android:layout_marginBottom="20dp"
                android:elevation="0dp"
                app:elevation="0dp"
                android:backgroundTint="#4E525B"
                app:fabCustomSize="80dp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="30dp"
                android:text="@string/registrar"
                android:textColor="@color/colorBlanco"
                android:textSize="25sp"
                android:padding="15dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:background="#999999" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="20dp">




        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>