<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.Conductor.ConductorHomeFragment">

    <RelativeLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- tools:context="com.heven.taxicabondemandtaxi.uber.fragment.FragmentHome" -->

    </RelativeLayout>


    <LinearLayout

        android:visibility="visible"
        android:elevation="5dp"
        android:background="@drawable/custom_layout_destination"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/white"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">


                    <ImageView
                        android:id="@+id/imageViewToolbarPhoto"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/perfil"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

                    <TextView
                        android:id="@+id/textViewToolbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/toolbar_title_home"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageViewToolbarPhoto"
                        app:layout_constraintStart_toEndOf="@+id/imageViewToolbarPhoto"
                        app:layout_constraintTop_toTopOf="@+id/imageViewToolbarPhoto" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_statut"
                        android:theme="@style/SCBSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_weight="9"
                        android:text=""
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btnConnect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Conectar"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/switch_statut"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>





            android:backgroundTint="@color/colorPrimaryDark"/>
    </LinearLayout>

    <ImageView
        android:visibility="gone"
        android:elevation="2dp"
        android:background="@drawable/custom_button_my_request"
        app:srcCompat="@drawable/ic_navigator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:id="@+id/btn_my_request"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"/>

    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--android:id="@+id/fab"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:clickable="true"-->
    <!--android:tint="@color/white"-->
    <!--app:backgroundTint="@color/colorYellowDark"-->
    <!--app:srcCompat="@drawable/ic_navigator"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:layout_marginBottom="10dp"/>-->

    <LinearLayout
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">

        <TextView
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:layout_centerHorizontal="true"
            android:cursorVisible="false"
            android:gravity="center"
            android:id="@+id/commander"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_button"
            android:text="@string/solicitar_ahora"
            android:textColor="@color/colorLogoBlack"/>

        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:textColor="@color/colorBlanco"
            android:background="@drawable/custom_button_second"
            android:layout_alignParentRight="true"
            android:id="@+id/reserver"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/cancelar" />
    </LinearLayout>


</RelativeLayout>